--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -70,7 +70,7 @@ body {
 
 
 /* Topic Index Page */
-.topics-index-page {
+.topics-index-page, .categories-show-page {
   .topic-list {
     .nav > li > a {
       position: relative;
@@ -97,5 +97,55 @@ body {
       border: 0;
       border-top: 1px solid #dcebf5;
     }
+  }
+}
+
+/* header */
+
+.navbar-static-top {
+  .dropdown-menu {
+    padding: 0px;
+    li a {
+      border-bottom: 1px solid #d8d8d8;
+      line-height: 2.4;
+
+      .glyphicon {
+        margin-right: 8px;
+      }
+    }
+  }
+}
+
+
+/* User profile page */
+.users-show-page {
+  .user-info {
+    .thumbnail {
+      margin-bottom: 0px;
+    }
+  }
+
+  .nav-tabs {
+    margin-bottom: 20px;
+
+    >li.active > a {
+      background-color: #fff;
+    }
+  }
+
+  .list-group {
+    .list-group-item {
+      border: none;
+      margin-bottom: 0px;
+      border-bottom: 1px solid #efefef;
+
+      .meta {
+        color: #b3b3b3;
+      }
+    }
+  }
+
+  .pagination {
+    margin: 12px 0;
   }
 }
